--- a/views/card.erb
+++ b/views/card.erb
@@ -1,3 +1,21 @@
+
+<% # TODO: Refactor%>
+
+<% #Javascript Equivalent: %>
+
+<% #const newPlace = { %>
+<%    #city: 'Tucson', %>
+<%    #state: 'Arizona', %>
+<%    #temp: 74 %>
+<% #} %>
+
+<% #<h6 class='title'>{newPlace.city}</h6> %>
+
+<% # Output cards based on number of places in array%>
+
+<% # TODO: Create edit/remove button functionality%>
+
+
 <div class='card-deck'>
 
     <div class="card text-center" style="width: 18rem;">
