--- a/views/index.erb
+++ b/views/index.erb
@@ -6,15 +6,17 @@
   <body>
     <div class="container-fluid">
 
-    <nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">HW</span>
+    <% #====== Navbar ====== %>
 
-  <form class="form-inline">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">+</span>
+      <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-0 h1">HW</span>
+
+        <form class="form-inline">
+            <div class="input-group">
+            <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">+</span>
       </div>
-      <input type="text" class="form-control" placeholder="Search by city"
+        <input type="text" class="form-control" placeholder="Search by city"
     </div>
   </form>
 </nav>
@@ -24,6 +26,9 @@
 
     </div>
 </div>
+
+<% #====== Bootstrap Scripts ====== %>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
