adds experiments with api calls and arrays

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
             <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">+</span>
       </div>
-        <input type="text" class="form-control" placeholder="Search by city"
+        <input type="text" method=POST class="form-control" placeholder="Search by city"
     </div>
   </form>
 </nav>
