--- a/views/card.erb
+++ b/views/card.erb
@@ -15,37 +15,16 @@
 
 <% # TODO: Create edit/remove button functionality%>
 
-
 <div class='card-deck'>
 
     <div class="card text-center" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">Tucson</h5>
+        <% city = 'Tucson' %>
+            <h5 class="card-title"><%= city %></h5>
             <h6 class="card-subtitle mb-2 text-muted">Arizona</h6>
             <p class="card-text">75°</p>
             <a href="#" class="btn btn-primary btn-sm">edit</a>
             <a href="#" class="btn btn-danger btn-sm">X</a>
         </div>
-    </div>
 
-    <div class="card text-center" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Eugene</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Oregon</h6>
-            <p class="card-text">35°</p>
-            <a href="#" class="btn btn-primary btn-sm">edit</a>
-            <a href="#" class="btn btn-danger btn-sm">X</a>
-        </div>
     </div>
-
-    <div class="card text-center" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Dallas</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Texas</h6>
-            <p class="card-text">67°</p>
-            <a href="#" class="btn btn-primary btn-sm">edit</a>
-            <a href="#" class="btn btn-danger btn-sm">X</a>
-        </div>
-    </div>
-
-</div>
